# analyseur-pseudo-pascal

./: .gitignore  Makefile  README.md  dune-project  pp.opam
OK/: a.p
lib/: ast.ml  ast.mli  check.ml  check.mli  debug.ml  debug.mli  dune  lexer.mll  parser.conflicts  parser.mly
test/: dune
